--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://yjh984.github.io/covid-19/"
+  "homepage": "https://yjh984.github.io/covid-19"
 }
